_sources/snippets/langs/c/array.txt

=====
array
=====

.. contents::
    :depth: 2



Declare
=======


.. code-block:: sh
   

    $ ce 'int a[10];'
    


.. code-block:: sh
   

    $ ce 'static int a[10];'
    


.. code-block:: sh
   

    $ ce 'int a[] = {1,2,3};'
    


.. code-block:: sh
   

    $ ce 'int a[] = {1,2,3}; int *b=a;'
    


.. warning::

    However you can't assign a vector to a pointer directly.


.. code-block:: sh
   

    $ ce 'int *a  = {1,2,3};'
    <stdin>:42:16: warning: incompatible integer to pointer conversion initializing 'int *' with an expression of type 'int' [-Wint-conversion]
        int *a  = {1,2,3};
                   ^
    <stdin>:42:18: warning: excess elements in scalar initializer
        int *a  = {1,2,3};
                     ^
    2 warnings generated.
    

Initialize a 2D array

.. code-block:: sh
   

    $ ce 'int a[10][10] = {10}; p("%d", a[0][0]);'
    10

Initialize a 2D array

.. code-block:: sh
   

    $ ce 'int a[10][10] = {{ 0 }}; p("%d", a[0][0]);'
    0

valc. so you can allocate memroy dynamically even if it is an array

.. code-block:: sh
   

    $ ce 'int k=10; int a[k];'
    

But with static, an error occurs

.. code-block:: sh
   

    $ ce 'int k=10;static int a[k];'
    <stdin>:42:25: error: variable length array declaration can not have 'static' storage duration
        int k=10;static int a[k];
                            ^ ~
    1 error generated.
    

